// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton disabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "MozTransitionProperty": "opacity",
      "MozUserSelect": "none",
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitTransitionDuration": "0.15s",
      "WebkitTransitionProperty": "opacity",
      "WebkitUserSelect": "none",
      "alignItems": "center",
      "cursor": "pointer",
      "flexBasis": "0%",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "column",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "msTouchAction": "manipulation",
      "msUserSelect": "none",
      "touchAction": "manipulation",
      "transitionDuration": "0.15s",
      "transitionProperty": "opacity",
      "userSelect": "none",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomLeftRadius": "50%",
        "borderBottomRightRadius": "50%",
        "borderTopLeftRadius": "50%",
        "borderTopRightRadius": "50%",
        "paddingBottom": "16px",
        "paddingLeft": "16px",
        "paddingRight": "16px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "gooddollar",
          "fontSize": "35px",
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "rgba(0,0,0,0.32)",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "11px",
        "fontWeight": "normal",
        "lineHeight": "13.2px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    edit
  </div>
</div>
`;

exports[`IconButton enabled matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "MozTransitionProperty": "opacity",
      "MozUserSelect": "none",
      "WebkitAlignItems": "center",
      "WebkitBoxAlign": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "WebkitTransitionDuration": "0.15s",
      "WebkitTransitionProperty": "opacity",
      "WebkitUserSelect": "none",
      "alignItems": "center",
      "cursor": "pointer",
      "flexBasis": "0%",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexAlign": "center",
      "msFlexDirection": "column",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "msTouchAction": "manipulation",
      "msUserSelect": "none",
      "touchAction": "manipulation",
      "transitionDuration": "0.15s",
      "transitionProperty": "opacity",
      "userSelect": "none",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomLeftRadius": "50%",
        "borderBottomRightRadius": "50%",
        "borderTopLeftRadius": "50%",
        "borderTopRightRadius": "50%",
        "paddingBottom": "16px",
        "paddingLeft": "16px",
        "paddingRight": "16px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "gooddollar",
          "fontSize": "35px",
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "color": "inherit",
        "direction": "ltr",
        "fontFamily": "Roboto",
        "fontSize": "11px",
        "fontWeight": "normal",
        "lineHeight": "13.2px",
        "textAlign": "center",
        "textDecoration": "none",
        "textTransform": "none",
      }
    }
  >
    edit
  </div>
</div>
`;
